Adding a new image

--- a/2025/2025-10-12-wir.md
+++ b/2025/2025-10-12-wir.md
@@ -1,8 +1,8 @@
 # TKTK
 ## TKTK
 
-![Closeup of typewriter letters](https://w3w.news/img/csabi-elter-unsplash-3000.jpg)
-*Photo by Csabi Elter via [Unsplash](https://unsplash.com/@bulgakovmihaly)*
+![Illustration of a user inspecting a Google AI page with a magnifying glass](https://w3w.news/img/googleAI-jurnej-furman-wc-2500.jpg)
+*Illustration by Jernej Furman via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/deed.en). Original version slightly cropped here.*
 
 **Lead item goes here.** Yadda yadda yadda.
 
@@ -88,13 +88,9 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 ### Odds & Ends
 
-- "Maxwell House coffee is temporarily changing its name to Maxwell Apartment to highlight the brand's value proposition in a time of rising coffee and housing costs. The brand is offering a year's supply of its coffee for $40 on Amazon, which it claims can save consumers over $1,000 a year compared to daily café runs." ([Fast Company](https://www.fastcompany.com/91412570/maxwell-house-changed-its-name-to-maxwell-apartment))
+- Comet sighting: https://www.nbcnews.com/science/space/two-greenish-comets-visible-night-sky-rcna236744
 
-- Telescope captures bright rainbow spectra of a star. ([Space.com](https://www.space.com/astronomy/telescope-sees-binary-stars-beautiful-rainbow-spectra-space-photo-of-the-day-for-oct-2-2025))
-
-- Ronan Day-Lewis called his father Daniel by his character's name while filming. Says it felt "natural." OK, dude. Whatever...  ([Variety](https://variety.com/2025/film/news/anemone-director-ronan-day-lewis-daniel-day-lewis-method-acting-1236537026/))
-
-- Uri Bram on throwing a good party https://www.atvbt.com/21-facts-about-throwing-good-parties/?ref=thebrowser.com
+- Maxwell House coffee is temporarily changing its name to Maxwell Apartment to highlight the brand's value proposition in a time of rising coffee and housing costs. The brand is offering a year's supply of its coffee for $40 on Amazon, which it claims can save consumers over $1,000 a year compared to daily café runs. ([Fast Company](https://www.fastcompany.com/91412570/maxwell-house-changed-its-name-to-maxwell-apartment)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
