Writing through news summaries, with help from Leo/Llama 3.1 8B

--- a/2025/2025-10-12-wir.md
+++ b/2025/2025-10-12-wir.md
@@ -18,12 +18,16 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 -->
 
+- A new round of U.S. tariffs against China reverberated through global markets Friday, including crypto. The token market's global valuation slid 9% amid fears of a prolonged trade war between two of the world's biggest economies. ([The Block](https://www.theblock.co/post/374261/total-crypto-market-cap-tanks-over-9-following-trumps-latest-round-of-retaliatory-tariffs-on-china))
+
 - OpenAI’s AI video generator, Sora, has shifted from an opt-out to an opt-in model for using copyrighted characters, sparking backlash from users who felt the change limited their creative freedom, while copyright holders and organizations like the Motion Picture Association argue that OpenAI must ensure compliance with copyright laws. ([Gizmodo](https://gizmodo.com/you-cant-use-copyrighted-characters-in-openais-sora-anymore-and-people-are-freaking-out-2000669714))
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- CoinDesk: Shayne Coplan Becomes Youngest Self-Made Billionaire After Polymarket's $2B Investment: BBG
+Oct 8, 2025 ([]())
+
+- Venezuela's new Nobel Peace Prize winner is a bitcoiner. ([Decrypt](https://decrypt.co/343891/latest-nobel-peace-prize-winner-bitcoin-supporter))
+
+- Binance will compensate users for depeg. ([The Block](https://www.theblock.co/post/374278/binance-to-compensate-some-users-after-several-markets-depeg-there-are-no-excuses))
 
 ### Market Snapshot
 
@@ -43,48 +47,50 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
   <tbody>
     <tr>
       <td><a href="https://coinmarketcap.com/currencies/bitcoin/">Bitcoin</a></td>
-      <td>$</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>$116,665.75</td>
+      <td>-4.9%</td>
+      <td>+24.3%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/GC%3DF?p=GC%253DF">Gold</a></td>
-      <td>$/oz</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>$4,000.40/oz</td>
+      <td>+2.3%</td>
+      <td>+52.2%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/DX-Y.NYB?p=DX-Y.NYB&.tsrc=fin-srch">USD Index</a></td>
-      <td></td>
-      <td>-%</td>
-      <td>-%</td>
+      <td>98.85</td>
+      <td>+1.2%</td>
+      <td>-8.9%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ETNX/">10-yr U.S. <br>Treasury Yield</a></td>
-      <td>%</td>
-      <td>-</td>
-      <td>-</td>
+      <td>4.051%</td>
+      <td>-0.068</td>
+      <td>-0.522</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ENDX/components?p=%255ENDX">Nasdaq 100</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>24,221.75</td>
+      <td>-2.3%</td>
+      <td>+15.3%</td>
     </tr>
     <tr>
       <td><a href="https://www.msci.com/indexes/index/899901">MSCI All-Country <br>World Index (ex US)</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>1,063.35</td>
+      <td>-1.5%</td>
+      <td>+ 26.8%</td>
     </tr>
   </tbody>
 </table>
 
 ### Looking Ahead
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- UK digital asset market expected to grow 20%. ([The Block](https://www.theblock.co/post/373828/uk-digital-asset-market-poised-20-growth-fca-lifts-four-year-bancrypto-etns))
+
+- Global banks announce joint stablecoin. https://decrypt.co/343842/bank-america-citi-goldman-sachs-exploring-joint-stablecoin
+
+- New study shows that AI models told to adopt a woman's persona become more risk-averse. https://decrypt.co/343871/tell-ai-models-act-like-women-most-become-more-risk-averse-study
 
 ### Odds & Ends
 
@@ -99,3 +105,14 @@ _**Please note, I regularly use several AI apps to assist production of w3w. But
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
+
+
+<!--
+
+Cutting room floor...
+
+- Securitize eyeing IPO via SPAC ([The Block](https://www.theblock.co/post/374286/rwa-giant-securitize-eyeing-public-listing-via-cantor-fitzgerald-spac-at-unicorn-valuation-bloomberg))
+
+- **Washington Watch:** Washington shutdown complicates the future of a crypto market structure bill. ([The Block](https://www.theblock.co/post/373723/us-government-shutdown-complicates-crypto-market-structure-bills-path-forward)) | CZ pardon in the works? https://decrypt.co/343896/presidential-pardon-binance-founder-cz-report
+
+-->
