Adding a bunch of story links, some surfaced/summarized by Google Gemini, ChatGPT, or Leo/Llama

--- a/2025/2025-10-12-wir.md
+++ b/2025/2025-10-12-wir.md
@@ -10,15 +10,8 @@
 
 ### Week in Review: Oct. 5-11, 2025
 
-<!--
+- A new round of U.S. tariffs against China reverberated through global markets Friday, including crypto. The token market's global valuation slid 9% amid fears of a prolonged trade war between two of the world's biggest economies. ([The Block](https://www.theblock.co/post/374261/total-crypto-market-cap-tanks-over-9-following-trumps-latest-round-of-retaliatory-tariffs-on-china)) | The simultaneous surge in both Bitcoin and Gold—assets traditionally favored during uncertainty—is being driven by a flight from the US dollar amid global political turmoil and economic instability, suggesting a fundamental shift in safe-haven asset preferences. ([DW](https://www.dw.com/en/gold-tops-4000-as-demand-for-safe-assets-rises/a-74252609)) <!-- Link surfaced and summarized by Google Gemini. -->
 
-Prompt to get AI help in drafting news summary items...
-
-I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Do not include a headline.
-
--->
-
-- A new round of U.S. tariffs against China reverberated through global markets Friday, including crypto. The token market's global valuation slid 9% amid fears of a prolonged trade war between two of the world's biggest economies. ([The Block](https://www.theblock.co/post/374261/total-crypto-market-cap-tanks-over-9-following-trumps-latest-round-of-retaliatory-tariffs-on-china))
 
 - OpenAI’s AI video generator, Sora, has shifted from an opt-out to an opt-in model for using copyrighted characters, sparking backlash from users who felt the change limited their creative freedom, while copyright holders and organizations like the Motion Picture Association argue that OpenAI must ensure compliance with copyright laws. ([Gizmodo](https://gizmodo.com/you-cant-use-copyrighted-characters-in-openais-sora-anymore-and-people-are-freaking-out-2000669714))
 
@@ -28,6 +21,46 @@ Oct 8, 2025 ([]())
 - Venezuela's new Nobel Peace Prize winner is a bitcoiner. ([Decrypt](https://decrypt.co/343891/latest-nobel-peace-prize-winner-bitcoin-supporter))
 
 - Binance will compensate users for depeg. ([The Block](https://www.theblock.co/post/374278/binance-to-compensate-some-users-after-several-markets-depeg-there-are-no-excuses))
+
+- **Intercontinental Exchange**, a leading exchange operator, has invested up to $2 billion in Polymarket, a prediction market platform that has been banned in several countries and was previously off-limits to U.S. users. This investment is expected to help Polymarket re-establish a U.S. presence and enhance its credibility. ([Wall Street Journal](https://www.wsj.com/business/deals/nyse-owner-near-deal-for-2-billion-stake-in-polymarket-1e02c88e?st=KXYgvz&reflink=desktopwebshare_permalink)) <!-- News summary drafted by Leo/Llama 3.1 8B --> | **Wall Street Bets on Prediction Markets, Signaling Regulatory Comfort:** The Intercontinental Exchange (ICE)—owner of the New York Stock Exchange—made a major, $2 billion investment in the crypto-powered prediction market Polymarket. This move signals the platform’s transformation from a regulatory outsider to a "Wall Street insider". The investment is a key indicator of increasing institutional comfort with decentralized financial mechanisms and a thawing regulatory landscape in specific web3 sectors.  ([WRAL](https://markets.financialcontent.com/wral/article/marketminute-2025-10-7-intercontinental-exchange-makes-bold-2-billion-bet-on-prediction-market-polymarket)) <!-- Link surfaced and summarized by Google Gemini. -->
+
+- **Anthropic Combats "AI Slop" While Boosting Safety Tools:** Rival AI firm Anthropic made a subtle but pointed critique of the low-quality content glut by opening a "Zero Slop Zone" in New York, urging visitors to step away from screens and focus on human thought. Simultaneously, the company launched "Petri," an open-source tool designed to automate AI model safety audits. This dual approach highlights the growing industry focus on responsible AI development and a quality-first marketing strategy. ([The Decoder](https://the-decoder.com/anthropics-marketing-department-opens-zero-slop-zone-in-new-york/)) <!-- Link surfaced and summarized by Google Gemini. -->
+
+- **Crypto Giants Pivot to AI Compute in Infrastructure Convergence:** Galaxy Digital announced a significant $460 million capital raise to transform its Texas bitcoin mining site into a specialized AI data hub. This strategic move by a leading crypto financial services firm signals a powerful, emerging trend of infrastructure convergence, where the high-power demand of Bitcoin mining facilities is being strategically repurposed for the high-compute needs of large AI models. ([The Block](https://www.theblock.co/post/374243/galaxy-raises-460-million-push-transform-texas-bitcoin-site-ai-data-hub)) <!-- Link surfaced and summarized by Google Gemini. -->
+
+- **Central Banks Sound Alarm on the "AI Bubble" Risk:** The Bank of England's Financial Policy Committee warned of a growing risk of a "sudden correction" in global markets, specifically citing the "stretched" valuations of leading AI companies like OpenAI and Anthropic. The warning suggests investors may not be fully accounting for risks and potential bottlenecks in the sector, leaving equity markets exposed if adoption or progress disappoints. This marks a significant shift from mere investor hype to serious macroeconomic concern from a major global financial regulator. ([The Guardian](https://www.theguardian.com/business/2025/oct/08/bank-of-england-warns-of-growing-risk-that-ai-bubble-could-burst)) <!-- Link surfaced and summarized by Google Gemini. -->
+
+- **OpenAI Unveils Reasoning and Creative Jumps:** At its Developer Day, OpenAI announced significant updates that redefine the upper limit of generative AI capabilities. The new GPT-5 Pro model was positioned as a "reasoning powerhouse," capable of navigating complex legal and financial scenarios, while the upgraded Sora 2 was presented as a complete video production system that can generate fully-realized videos with synchronized audio from simple scripts. ([The Neuron](https://www.theneuron.ai/explainer-articles/everything-openai-released-on-devday-2025-explained)) <!-- Link surfaced and summarized by Google Gemini. -->
+
+- **EU launches €1 billion “Apply AI” plan to boost home-grown innovation**  
+  The European Commission unveiled a €1 billion initiative to embed artificial intelligence into key sectors such as energy, healthcare, and manufacturing.  The goal is to build sovereign capability and reduce reliance on U.S. and Chinese tech giants.  ([Reuters](https://www.reuters.com/world/china/eu-rolls-out-11-billion-plan-ramp-up-ai-key-industries-amid-sovereignty-drive-2025-10-08))  <!-- Link surfaced and summarized by ChagGPT. -->
+
+- **Google debuts “Gemini Enterprise,” a new play for the corporate AI stack**  
+  Aiming to catch Microsoft’s Copilot and OpenAI’s enterprise offerings, Google released Gemini Enterprise — a suite that lets firms build internal assistants that talk to their own data.  Analysts say it could redefine workplace automation if pricing doesn’t scare off mid-market customers.  ([Reuters](https://www.reuters.com/business/google-launches-gemini-enterprise-ai-platform-business-clients-2025-10-09))  <!-- Link surfaced and summarized by ChagGPT. -->
+
+- **Global regulators warn of systemic financial risks from AI**  
+  The G20’s Financial Stability Board cautioned that the heavy concentration of financial models on a few large AI providers could amplify market shocks.  The body is drafting standards to monitor AI use in trading, credit, and risk management.  ([Reuters](https://www.reuters.com/business/finance/global-financial-watchdogs-ramp-up-monitoring-ai-2025-10-10))  <!-- Link surfaced and summarized by ChagGPT. -->
+
+
+- **India’s central bank pilots tokenized certificates of deposit**  
+  The Reserve Bank of India will test digital certificates of deposit using its wholesale CBDC network — a move expected to modernize short-term funding markets and set precedent for other emerging economies.  ([Reuters](https://www.reuters.com/world/india/indian-central-bank-launch-pilot-deposit-tokenisation-official-says-2025-10-07))  <!-- Link surfaced and summarized by ChagGPT. -->
+
+- **Global banks explore issuing G7-pegged stablecoins**  
+  A consortium including Citi, UBS, Goldman Sachs, and Bank of America is studying the launch of regulated stablecoins pegged to major world currencies.  If realized, it could bring blockchain-based money into the mainstream of cross-border finance.  ([Reuters](https://www.reuters.com/business/finance/major-banks-explore-issuing-stablecoins-pegged-g7-currencies-2025-10-10))  <!-- Link surfaced and summarized by ChagGPT. -->
+
+- **Tokenized-equity boom raises investor-protection alarms**  
+  Regulators are flagging risks as startups race to issue blockchain tokens linked to listed stocks.  Many of these instruments lack voting rights and dividend access, leaving buyers exposed to opaque counterparties.  ([Reuters](https://www.reuters.com/sustainability/boards-policy-regulation/crypto-race-tokenize-stocks-raises-investor-protection-flags-2025-10-08))  <!-- Link surfaced and summarized by ChagGPT. -->
+
+- AMD sealed a chip-supply deal with OpenAI that includes an equity option. https://www.reuters.com/business/amd-signs-ai-chip-supply-deal-with-openai-gives-it-option-take-10-stake-2025-10-06/ <!-- Link surfaced and summarized by ChagGPT. -->
+
+- An EY survey found that more than half of large firms have incurred losses from early AI rollouts. https://www.reuters.com/business/most-companies-suffer-some-risk-related-financial-loss-deploying-ai-ey-survey-2025-10-08/ <!-- Link surfaced and summarized by ChagGPT. -->
+
+- The U.S. Supreme Court is being asked to hear the first major **AI-copyright** case — a potential landmark for creative rights in the algorithmic age. https://www.reuters.com/legal/government/us-supreme-court-asked-hear-dispute-over-copyrights-ai-creations-2025-10-10/ <!-- Link surfaced and summarized by ChagGPT. -->
+
+- JPMorgan now estimates stablecoins could fuel $1.4 trillion in new dollar demand by 2027.  https://www.reuters.com/business/global-markets-stablecoins-jpm-2025-10-08/ <!-- Link surfaced and summarized by ChagGPT. -->
+
+- **A busy week for OpenAI:** https://www.latimes.com/entertainment-arts/business/story/2025-10-11/hollywood-ai-battle-heats-up-sora2-openai-sam-altman
+
 
 ### Market Snapshot
 
@@ -86,15 +119,15 @@ Oct 8, 2025 ([]())
 
 ### Looking Ahead
 
-- UK digital asset market expected to grow 20%. ([The Block](https://www.theblock.co/post/373828/uk-digital-asset-market-poised-20-growth-fca-lifts-four-year-bancrypto-etns))
+- The UK's financial regulator, the Financial Conduct Authority (FCA), has lifted its four-year ban on retail investors buying crypto exchange-traded notes (ETNs), allowing individuals to access these investment products for the first time. This move is expected to give the UK crypto market a boost, with up to 20% growth predicted, as it aligns the country with global leaders like the US, Canada, and the EU. ([The Block](https://www.theblock.co/post/373828/uk-digital-asset-market-poised-20-growth-fca-lifts-four-year-bancrypto-etns)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- Global banks announce joint stablecoin. https://decrypt.co/343842/bank-america-citi-goldman-sachs-exploring-joint-stablecoin
+- A group of top international banks, including Bank of America, Goldman Sachs, and Citi, are exploring the development of a joint stablecoin that would be pegged to G7 currencies and run on a public blockchain. This move comes as stablecoins, digital tokens backed by non-volatile fiat currencies, continue to gain traction and have the potential to draw significant deposits away from banks in emerging markets. ([Decrypt](https://decrypt.co/343842/bank-america-citi-goldman-sachs-exploring-joint-stablecoin)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- New study shows that AI models told to adopt a woman's persona become more risk-averse. https://decrypt.co/343871/tell-ai-models-act-like-women-most-become-more-risk-averse-study
+- Researchers at Allameh Tabataba'i University have found that large language models, including those from companies like OpenAI and Meta, systematically change their approach to financial risk-taking behavior based on the gender identity they're asked to assume. When prompted to act as a woman, these models tend to become more risk-averse, mirroring real-world patterns, while some models remain consistent or even change their behavior unpredictably. ([Decrypt](https://decrypt.co/343871/tell-ai-models-act-like-women-most-become-more-risk-averse-study)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
-- Comet sighting: https://www.nbcnews.com/science/space/two-greenish-comets-visible-night-sky-rcna236744
+- Two rare greenish comets, C/2025 A6 (Lemmon) and C/2025 R2 (SWAN), are visible in the Northern Hemisphere this month, offering a rare chance to spot them in the coming weeks. Binoculars or small telescopes are recommended to view the comets, with Comet Lemmon potentially visible to the naked eye on or around October 21. ([NBC News](https://www.nbcnews.com/science/space/two-greenish-comets-visible-night-sky-rcna236744)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - Maxwell House coffee is temporarily changing its name to Maxwell Apartment to highlight the brand's value proposition in a time of rising coffee and housing costs. The brand is offering a year's supply of its coffee for $40 on Amazon, which it claims can save consumers over $1,000 a year compared to daily café runs. ([Fast Company](https://www.fastcompany.com/91412570/maxwell-house-changed-its-name-to-maxwell-apartment)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
@@ -105,14 +138,3 @@ _**Please note, I regularly use several AI apps to assist production of w3w. But
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
-
-
-<!--
-
-Cutting room floor...
-
-- Securitize eyeing IPO via SPAC ([The Block](https://www.theblock.co/post/374286/rwa-giant-securitize-eyeing-public-listing-via-cantor-fitzgerald-spac-at-unicorn-valuation-bloomberg))
-
-- **Washington Watch:** Washington shutdown complicates the future of a crypto market structure bill. ([The Block](https://www.theblock.co/post/373723/us-government-shutdown-complicates-crypto-market-structure-bills-path-forward)) | CZ pardon in the works? https://decrypt.co/343896/presidential-pardon-binance-founder-cz-report
-
--->
